@@ -418,6 +418,8 @@ $pgv_lang["batch_update"]="Perform batch updates/edits on your GEDCOM";
 // Text for the Gedcom Checker
 $pgv_lang["gedcheck"]     = "Gedcom checker";          // Module title
 $pgv_lang["gedcheck_text"]= "This module checks the format of a GEDCOM file against the <a href=\"http://phpgedview.sourceforge.net/ged551-5.pdf\">5.5.1 GEDCOM Specification</a>.  It also checks for a number of common errors in your data.  Note that there are lots of versions, extensions and variations on the specification so you should not be concerned with any issues other than those flagged as \"Critical\".  The explanation for all the line-by-line errors can be found in the specification, so please check there before asking for help.";
+$pgv_lang['gedcheck_sync'] = "Edits to made to the database are not synchronised to the file #GLOBALS[ged]#.  The file contents may be out-of-date.  You can synchronise it with the database now by performing an <b><a \"#GLOBALS[ged_link]#\">export</a></b>.";
+$pgv_lang['gedcheck_nothing'] = "No errors found at this level.";
 $pgv_lang["level"]        = "Level";                   // Levels of checking
 $pgv_lang["critical"]     = "Critical";
 $pgv_lang["error"]        = "Error";
